online-boutique/kubernetes/04-cartservice-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cartservice
  labels:
    app: cartservice
  namespace: online-boutique
spec:
  selector:
    matchLabels:
      app: cartservice
  template:
    metadata:
      labels:
        app: cartservice
        app.kubernetes.io/name: cartservice
        app.kubernetes.io/version: "0.1"
        app.kubernetes.io/component: cartservice
        app.kubernetes.io/part-of: online-boutique
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: server
        image: quay.io/mauroseb/cartservice:0.1
        ports:
        - containerPort: 7070
        resources:
          requests:
            cpu: 200m
            memory: 64Mi
          limits:
            cpu: 300m
            memory: 128Mi
        readinessProbe:
          initialDelaySeconds: 15
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:7070", "-rpc-timeout=5s"]
        livenessProbe:
          initialDelaySeconds: 15
          periodSeconds: 10
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:7070", "-rpc-timeout=5s"]
