online-boutique/kubernetes/06-checkoutservice-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: checkoutservice
  labels:
    app: checkoutservice
  namespace: online-boutique
spec:
  selector:
    matchLabels:
      app: checkoutservice
  template:
    metadata:
      labels:
        app: checkoutservice
        app.kubernetes.io/name: checkoutservice
        app.kubernetes.io/version: 0.1
        app.kubernetes.io/component: checkoutservice
        app.kubernetes.io/part-of: online-boutique
    spec:
      containers:
        - name: server
          image: quay.io/mauroseb/checkoutservice:0.1
          ports:
          - containerPort: 5050
          readinessProbe:
            exec:
              command: ["/bin/grpc_health_probe", "-addr=:5050"]
          livenessProbe:
            exec:
              command: ["/bin/grpc_health_probe", "-addr=:5050"]
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
