online-boutique/kubernetes/08-currencyservice-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: currencyservice
spec:
  selector:
    matchLabels:
      app: currencyservice
  template:
    metadata:
      labels:
        app: currencyservice
        app.kubernetes.io/name: currencyservice
        app.kubernetes.io/version: 0.1
        app.kubernetes.io/component: currencyservice
        app.kubernetes.io/part-of: online-boutique
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: server
        image: quay.io/mauroseb/currencyservice:0.1
        ports:
        - name: grpc
          containerPort: 7000
        readinessProbe:
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:7000"]
        livenessProbe:
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:7000"]
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
          limits:
            cpu: 200m
            memory: 128Mi
