online-boutique/kubernetes/10-emailservice-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emailservice
  labels:
    app: emailservice
  namespace: online-boutique
spec:
  selector:
    matchLabels:
      app: emailservice
  template:
    metadata:
      labels:
        app: emailservice
        app.kubernetes.io/name: emailservice
        app.kubernetes.io/version: 0.1
        app.kubernetes.io/component: emailservice
        app.kubernetes.io/part-of: online-boutique
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: server
        image: quay.io/mauroseb/emailservice:0.1
        ports:
        - containerPort: 8080
        readinessProbe:
          periodSeconds: 5
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:8080"]
        livenessProbe:
          periodSeconds: 5
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:8080"]
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
          limits:
            cpu: 200m
            memory: 128Mi
