online-boutique/kubernetes/14-paymentservice-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paymentservice
  labels:
    app: paymentservice
  namespace: online-boutique
spec:
  selector:
    matchLabels:
      app: paymentservice
  template:
    metadata:
      labels:
        app: paymentservice
        app.kubernetes.io/name: paymentservice
        app.kubernetes.io/version: "0.1"
        app.kubernetes.io/component: paymentservice
        app.kubernetes.io/part-of: online-boutique
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: server
        image: quay.io/mauroseb/paymentservice:0.1
        ports:
        - containerPort: 50051
        readinessProbe:
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:50051"]
        livenessProbe:
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:50051"]
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
          limits:
            cpu: 200m
            memory: 128Mi
