online-boutique/kubernetes/18-recommendation-service.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recommendationservice
  labels:
    app: recommendationservice
  namespace: online-boutique
spec:
  selector:
    matchLabels:
      app: recommendationservice
  template:
    metadata:
      labels:
        app: recommendationservice
        app.kubernetes.io/name: recommendationservice
        app.kubernetes.io/version: 0.1
        app.kubernetes.io/component: recommendationservice
        app.kubernetes.io/part-of: online-boutique
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: server
        image: quay.io/mauroseb/recommendationservice:0.1
        ports:
        - containerPort: 8080
        readinessProbe:
          periodSeconds: 5
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:8080"]
        livenessProbe:
          periodSeconds: 5
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:8080"]
        resources:
          requests:
            cpu: 100m
            memory: 220Mi
          limits:
            cpu: 200m
            memory: 450Mi
