online-boutique/kubernetes/22-shippingservice-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shippingservice
  labels:
    app: shippingservice
  namespace: online-boutique
spec:
  selector:
    matchLabels:
      app: shippingservice
  template:
    metadata:
      labels:
        app: shippingservice
        app.kubernetes.io/name: shippingservice
        app.kubernetes.io/version: 0.1
        app.kubernetes.io/component: shippingservice
        app.kubernetes.io/part-of: online-boutique
    spec:
      containers:
      - name: server
        image: quay.io/mauroseb/shippingservice:0.1
        ports:
        - containerPort: 50051
        readinessProbe:
          periodSeconds: 5
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:50051"]
        livenessProbe:
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:50051"]
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
          limits:
            cpu: 200m
            memory: 128Mi
