online-boutique/kubernetes/03-adsservice-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: adservice
  labels:
    app: adservice
    app.kubernetes.io/name: adservice
    app.kubernetes.io/version: 0.1
    app.kubernetes.io/component: adservice
    app.kubernetes.io/part-of: online-boutique
  namespace: online-boutique
spec:
  type: ClusterIP
  selector:
    app: adservice
  ports:
  - name: grpc
    port: 9555
    targetPort: 9555
