online-boutique/kubernetes/05-cartservice-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: cartservice
  labels:
    app: cartservice
    app.kubernetes.io/name: cartservice
    app.kubernetes.io/version: "0.1"
    app.kubernetes.io/component: cartservice
    app.kubernetes.io/part-of: online-boutique
  namespace: online-boutique
spec:
  type: ClusterIP
  selector:
    app: cartservice
  ports:
  - name: grpc
    port: 7070
    targetPort: 7070
