online-boutique/kubernetes/07-checkoutservice-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: checkoutservice
  labels:
    app: checkoutservice
    app.kubernetes.io/name: checkoutservice
    app.kubernetes.io/version: "0.1"
    app.kubernetes.io/component: checkoutservice
    app.kubernetes.io/part-of: online-boutique
spec:
  type: ClusterIP
  selector:
    app: checkoutservice
  ports:
  - name: grpc
    port: 5050
    targetPort: 5050
