online-boutique/kubernetes/11-emailservice-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: emailservice
  labels:
    app: emailservice
    app.kubernetes.io/name: emailservice
    app.kubernetes.io/version: 0.1
    app.kubernetes.io/component: emailservice
    app.kubernetes.io/part-of: online-boutique
  namespace: online-boutique
spec:
  type: ClusterIP
  selector:
    app: emailservice
  ports:
  - name: grpc
    port: 5000
    targetPort: 8080
