online-boutique/kubernetes/13-frontend-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: frontend
    app.kubernetes.io/name: frontend
    app.kubernetes.io/version: "0.1"
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: online-boutique
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
  - name: http
    port: 80
    targetPort: 8080
