online-boutique/kubernetes/17-productcatalogservice-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: productcatalogservice
  labels:
    app: adservice
    app.kubernetes.io/name: productcatalogservice
    app.kubernetes.io/version: "0.1"
    app.kubernetes.io/component: productcatalogservice
    app.kubernetes.io/part-of: online-boutique
spec:
  type: ClusterIP
  selector:
    app: productcatalogservice
  ports:
  - name: grpc
    port: 3550
    targetPort: 3550
