online-boutique/kubernetes/19-recommendationservice-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: recommendationservice
  labels:
    app: adservice
    app.kubernetes.io/name: recommendationservice
    app.kubernetes.io/version: "0.1"
    app.kubernetes.io/component: recommendationservice
    app.kubernetes.io/part-of: online-boutique
  namespace: online-boutique
spec:
  type: ClusterIP
  selector:
    app: recommendationservice
  ports:
  - name: grpc
    port: 8080
    targetPort: 8080
