online-boutique/kubernetes/21-redis-cart-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: redis-cart
  labels:
    app: adservice
    app.kubernetes.io/name: redis-cart
    app.kubernetes.io/version: "0.1"
    app.kubernetes.io/component: redis-cart
    app.kubernetes.io/part-of: online-boutique
  namespace: online-boutique
spec:
  type: ClusterIP
  selector:
    app: redis-cart
  ports:
  - name: redis
    port: 6379
    targetPort: 6379
