online-boutique/kubernetes/23-shippingservice-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: shippingservice
  labels:
    app: adservice
    app.kubernetes.io/name: shippingservice
    app.kubernetes.io/version: "0.1"
    app.kubernetes.io/component: shippingservice
    app.kubernetes.io/part-of: online-boutique
spec:
  type: ClusterIP
  selector:
    app: shippingservice
  ports:
  - name: grpc
    port: 50051
    targetPort: 50051
