online-boutique/kubernetes/24-frontend-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: frontend
    app.kubernetes.io/component: frontend
    app.kubernetes.io/name: frontend
    app.kubernetes.io/part-of: online-boutique
    app.kubernetes.io/version: "0.1"
  name: frontend
  namespace: online-boutique
spec:
  host: online-boutique.apps.ocp4-bm.t1.lab.local
  port:
    targetPort: http
  to:
    kind: Service
    name: frontend
    weight: 100
  wildcardPolicy: None
